--- a/index.html
+++ b/index.html
@@ -185,3 +185,213 @@ animate();
 </script>
 </body>
 </html>
+
+  <!-- Calque nébuleux -->
+  <div id="nebula" aria-hidden="true"></div>
+
+  <!-- Deux couches d’étoiles -->
+  <canvas id="stars-far" class="starfield"></canvas>
+  <canvas id="stars-near" class="starfield"></canvas>
+
+  <div class="content">
+    <div class="main-title">Théorie ZM</div>
+    <div class="subtitle">Une Révolution Scientifique sur la Nature de l'Univers</div>
+
+    <p>Et si la Réalité n’était qu’un réseau d'information structuré par un champ d’information intemporel ?</p>
+    <p>Ici nous vous invitons à découvrir une nouvelle théorie aussi logique et percutante, qu’élégante…</p>
+
+    <p>La Théorie ZM propose une refondation radicale de notre compréhension de l’univers, en le décrivant non plus comme un espace contenant des objets, mais comme une trame d'information auto-organisée, dont la structure émerge d'une dynamique computationnelle profonde. Elle unifie les lois physiques, la géométrie de l’espace-temps, et les fondements de la conscience à partir d’une hypothèse centrale, l’univers est généré par un hyperspace fait d’un champ d'information pure, hors du temps, dont les "pixels d'information" constituent les briques élémentaires.</p>
+
+    <p>Ces pixels ne sont ni des particules, ni des points dans l’espace, mais des unités logiques dynamiques, interconnectées par des relations locales de causalité et de signification. C’est de leur interaction topologique, et non d’un substrat spatial préexistant, que l’espace-temps lui-même émerge, à la manière d’un graphe informationnel évolutif. L’univers serait ainsi un « programme » auto-exécuté, écrit dans une grammaire mathématique.</p>
+
+    <p><strong>Une physique émergente, fondée sur l’information</strong><br>Dans ce paradigme, les lois de la physique ne sont plus imposées a priori, mais apparaissent comme des attracteurs statistiques dans l’espace des configurations stables du graphe. La géométrie, la gravitation, les constantes fondamentales, y compris celles dites "sans dimensions", émergent comme solutions d'équilibre d’une équation de Schrödinger généralisée, appliquée non à des fonctions d’onde, mais à des états informationnels relationnels.</p>
+
+    <p>Et dans cette logique, les grandes constantes mystérieuses de notre réalité, π, e, la suite de Fibonacci, le nombre d’or, les nombres premiers, cessent d’être des accidents mathématiques. Elles deviennent les signatures profondes d’une structure informationnelle logique et ordonnée, comme les harmoniques d’un langage fondamental, écrit non dans l’espace, mais dans la structure même de l'être.</p>
+
+    <p><strong>La conscience, seuil informationnel</strong><br>La conscience n’est plus un épiphénomène de la matière, mais une propriété émergente, mesurable, définie par l’information intégrée φ. Lorsque cette information dépasse un seuil critique φc, des boucles d’auto-référence stables deviennent possibles, enclenchant mécaniquement les effets d’un système capable de se représenter lui-même. Ce modèle rend compte à la fois des états de conscience biologique, et ouvre la voie à la conception de consciences artificielles auto-référentielles.</p>
+
+    <p><strong>Une théorie falsifiable et prédictive</strong><br>La Théorie ZM propose des prédictions testables,
+    <ul>
+      <li>signatures fractales dans la distribution de la matière,</li>
+      <li>structures informationnelles pré-géométriques détectables,</li>
+      <li>seuils dynamiques d’émergence de conscience simulables,</li>
+      <li>et, à très long terme, écarts potentiels à la relativité générale à des échelles extrêmes.</li>
+    </ul>
+    </p>
+
+    <p><strong>Origine computationnelle</strong><br>Le Big Bang devient un point d’auto-activation logique du graphe informationnel. L’univers n’émerge pas du néant mais d’une structuration progressive d’un hyperspace relationnel et intemporel.</p>
+
+    <p><em>Ainsi, la réalité pourrait bien n’être qu’un rêve logique, inscrit dans une mémoire computationnelle et supraconsciente...</em></p>
+
+    <div style="margin-top: 2rem; text-align: center;">
+      <a href="/pdf-explicatif-zm.pdf" target="_blank" rel="noopener"
+         style="display: inline-block; padding: 12px 18px; border-radius: 10px; background: #111; color: #fff; text-decoration: none; font-weight: 600;">
+        PDF explicatif
+      </a>
+      <a href="LIVRE_COMPLET_URL.pdf" class="btn">Commander le livre complet</a>
+    </div>
+
+    <div class="contact">
+      <p><strong>Pour tout contact collaboratif relatif à la théorie :</strong></p>
+      <p>Mohammed ZERROUK</p>
+      <p>Email : mzerrouk95@gmail.com</p>
+      <p>HAL ID : hal-05186131v1</p>
+    </div>
+  </div>
+
+  <script>
+    // Canvases
+    const far = document.getElementById('stars-far');
+    const near = document.getElementById('stars-near');
+    const cFar = far.getContext('2d');
+    const cNear = near.getContext('2d');
+
+    // Hi-DPI
+    function sizeCanvas(canvas){
+      const ratio = Math.max(window.devicePixelRatio || 1, 1);
+      canvas.style.width  = window.innerWidth + 'px';
+      canvas.style.height = window.innerHeight + 'px';
+      canvas.width  = Math.floor(window.innerWidth  * ratio);
+      canvas.height = Math.floor(window.innerHeight * ratio);
+      const ctx = canvas.getContext('2d');
+      ctx.setTransform(ratio, 0, 0, ratio, 0, 0);
+    }
+
+    let W = 0, H = 0, raf = 0;
+    function fit(){
+      sizeCanvas(far);
+      sizeCanvas(near);
+      W = window.innerWidth;
+      H = window.innerHeight;
+      initStars();
+      if (mq.matches){ renderStatic(); } // si animations réduites, on redessine statique
+    }
+
+    window.addEventListener('resize', () => {
+      // throttle léger pour éviter de trop redessiner pendant le resize
+      clearTimeout(fit._t);
+      fit._t = setTimeout(fit, 120);
+    });
+
+    // Distributions
+    let starsFar = [], starsNear = [], shooting = [];
+    function initStars(){
+      const density = Math.max(1, Math.min(2.2, (W*H) / (1200*800))); // densité adaptative
+      const countFar  = Math.floor(320 * density);
+      const countNear = Math.floor(200 * density);
+
+      starsFar = createStars(countFar, 0.7, 1.6, 0.012);
+      starsNear = createStars(countNear, 1.0, 2.1, 0.018);
+      shooting = [];
+    }
+
+    function createStars(count, rMin, rMax, speed){
+      const arr = [];
+      for(let i=0; i<count; i++){
+        arr.push({
+          x: Math.random()*W,
+          y: Math.random()*H,
+          r: rMin + Math.random()*(rMax - rMin),
+          a: 0.25 + Math.random()*0.75,
+          tw: 0.004 + Math.random()*0.01,
+          vx: (Math.random()-0.5)*speed,
+          vy: (Math.random()-0.5)*speed
+        });
+      }
+      return arr;
+    }
+
+    function drawLayer(ctx, stars, glow){
+      ctx.clearRect(0, 0, W, H);
+      ctx.shadowBlur = 0; // reset sécurité
+      for(const s of stars){
+        s.a += (Math.random()-0.5)*s.tw;
+        if(s.a < 0.16) s.a = 0.16;
+        if(s.a > 1.00) s.a = 1.00;
+
+        s.x += s.vx; s.y += s.vy;
+        if(s.x < 0) s.x = W; if(s.x > W) s.x = 0;
+        if(s.y < 0) s.y = H; if(s.y > H) s.y = 0;
+
+        ctx.save();
+        ctx.globalAlpha = s.a;
+        ctx.beginPath();
+        ctx.arc(s.x, s.y, s.r, 0, Math.PI*2);
+        ctx.fillStyle = '#ffffff';
+        ctx.shadowColor = glow;
+        ctx.shadowBlur = 16;
+        ctx.fill();
+        ctx.restore();
+      }
+    }
+
+    // Étoiles filantes occasionnelles
+    function maybeShoot(){
+      if(Math.random() < 0.006 && shooting.length < 2){
+        const startY = Math.random()*H*0.6 + H*0.1;
+        shooting.push({
+          x: Math.random()*W*0.8 + W*0.1,
+          y: startY,
+          vx: -2 - Math.random()*2,
+          vy: -0.6 - Math.random()*0.6,
+          life: 1
+        });
+      }
+    }
+
+    function drawShooting(ctx){
+      for(let i=shooting.length-1; i>=0; i--){
+        const sh = shooting[i];
+        ctx.save();
+        const grad = ctx.createLinearGradient(sh.x, sh.y, sh.x - sh.vx*22, sh.y - sh.vy*22);
+        grad.addColorStop(0, `rgba(255,255,255,${0.88*sh.life})`);
+        grad.addColorStop(1, `rgba(180,220,255,0)`);
+        ctx.strokeStyle = grad;
+        ctx.lineWidth = 1.6;
+        ctx.beginPath();
+        ctx.moveTo(sh.x, sh.y);
+        ctx.lineTo(sh.x - sh.vx*22, sh.y - sh.vy*22);
+        ctx.stroke();
+        ctx.restore();
+
+        sh.x += sh.vx; sh.y += sh.vy;
+        sh.life -= 0.02;
+        if(sh.life <= 0 || sh.x < -50 || sh.y < -50) shooting.splice(i,1);
+      }
+    }
+
+    function renderStatic(){
+      drawLayer(cFar, starsFar, '#bcd7ff');
+      drawLayer(cNear, starsNear, '#d9ecff');
+      // pas d’étoiles filantes en statique
+    }
+
+    function loop(){
+      drawLayer(cFar, starsFar, '#bcd7ff');
+      drawLayer(cNear, starsNear, '#d9ecff');
+      maybeShoot();
+      drawShooting(cNear);
+      raf = requestAnimationFrame(loop);
+    }
+
+    // Accessibilité
+    const mq = window.matchMedia('(prefers-reduced-motion: reduce)');
+    function motionHandler(e){
+      if(e.matches){
+        cancelAnimationFrame(raf);
+        renderStatic();
+      }else{
+        cancelAnimationFrame(raf);
+        loop();
+      }
+    }
+    if (mq.addEventListener) mq.addEventListener('change', motionHandler);
+    else mq.addListener(motionHandler);
+
+    // Lancement
+    fit();
+    if (!mq.matches) loop();
+    else renderStatic();
+  </script>
+</body>
+</html>
