--- a/index.html
+++ b/index.html
@@ -4,29 +4,35 @@
   <!-- Vérification Google Search Console -->
   <meta name="google-site-verification" content="Hph_EoL7q-XHXSRWwijiGyxshOpkYYT5bCRxTyjdQjw" />
 
-  <!-- Métadonnées SEO -->
+  <!-- Métadonnées SEO de base -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="robots" content="index, follow" />
-  <meta name="description" content="La Théorie ZM propose une nouvelle vision radicale de l’univers. Fondée sur l'information pure, une dynamique computationnelle et l'émergence de la conscience, elle redéfinit les fondements de la réalité." />
-  <meta name="keywords" content="Théorie ZM, physique de l'information, cosmologie computationnelle, conscience, supraconscience, pixel d'information, hyperspace, gravité quantique, science unifiée" />
+  <link rel="canonical" href="https://zm-theory.github.io/"/>
+
+  <!-- Titre + description (inclut la requête “ZM Théorie”) -->
+  <title>Théorie ZM — ZM Théorie, une nouvelle vision de l’Univers fondée sur l’information</title>
+  <meta name="description" content="ZM Théorie, ou Théorie ZM, propose une cosmologie informationnelle unifiée : l’univers comme réseau d’information, lois émergentes et conscience mesurable. Découvrez la vision complète et le PDF explicatif.">
+  <meta name="keywords" content="Théorie ZM, ZM Théorie, physique de l'information, cosmologie computationnelle, conscience, supraconscience, pixels d'information, hyperspace, gravité quantique, science unifiée" />
+  <meta name="theme-color" content="#0a0f20"/>
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Théorie ZM – Une Révolution sur la Nature de l’Univers" />
-  <meta property="og:description" content="Une nouvelle théorie du réel, logique, informationnelle et consciente. Découvrez comment l’univers pourrait être une structure computationnelle émergente." />
+  <meta property="og:title" content="Théorie ZM — ZM Théorie, une nouvelle vision de l’Univers fondée sur l’information" />
+  <meta property="og:description" content="Une cosmologie informationnelle unifiée : espace-temps, lois physiques et conscience émergent d’un graphe d’information. PDF explicatif disponible." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://zm-theory.github.io/" />
-  <meta property="og:image" content="https://zerrouk-theory.github.io/images/og-theoriezm.jpg" />
+  <meta property="og:image" content="https://zm-theory.github.io/images/og-theoriezm.jpg" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Théorie ZM – Une Révolution sur la Nature de l’Univers" />
-  <meta name="twitter:description" content="Une cosmologie informationnelle unifiée de l’espace, du temps et de la conscience." />
-  <meta name="twitter:image" content="https://zerrouk-theory.github.io/images/og-theoriezm.jpg" />
+  <meta name="twitter:title" content="Théorie ZM — ZM Théorie, une nouvelle vision de l’Univers fondée sur l’information" />
+  <meta name="twitter:description" content="L’univers comme réseau d’information : lois émergentes, géométrie, conscience. Lisez l’intro et le PDF explicatif." />
+  <meta name="twitter:image" content="https://zm-theory.github.io/images/og-theoriezm.jpg" />
 
-  <title>Théorie ZM – Une Révolution sur la Nature de l’Univers</title>
+  <!-- Favicon -->
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
 
+  <!-- Styles -->
   <style>
     html, body{
       margin: 0;
@@ -37,6 +43,9 @@
       color: #f2f2f2;
       line-height: 1.7;
       overflow-x: hidden;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+      text-rendering: optimizeLegibility;
     }
 
     /* Empilement clair : 0=nébuleuse, 1=étoiles lointaines, 2=étoiles proches, 10=contenu */
@@ -77,7 +86,7 @@
       -webkit-backdrop-filter: blur(2px);
     }
 
-    .main-title{ text-align: center; font-size: 1.8rem; font-weight: bold; margin-bottom: .5rem; }
+    .main-title{ text-align: center; font-size: 2rem; font-weight: 700; margin-bottom: .5rem; }
     .subtitle{ text-align: center; font-size: 1.15rem; color: #aad0ff; font-style: italic; margin-bottom: 2rem; }
 
     .contact{
@@ -94,15 +103,16 @@
     .btn{
       display: inline-block;
       margin: .3em .4em;
-      padding: .5em 1em;
+      padding: .6em 1.1em;
       background: #222b40;
       color: #aad0ff;
-      border-radius: 6px;
+      border-radius: 8px;
       text-decoration: none;
-      font-weight: bold;
-      transition: background .2s, color .2s;
+      font-weight: 700;
+      transition: background .2s, color .2s, transform .08s;
+      border: 1px solid #2d3b5a;
     }
-    .btn:hover{ background: #10101a; color: #fff; }
+    .btn:hover{ background: #10101a; color: #fff; transform: translateY(-1px); }
 
     /* Accessibilité : si l’utilisateur préfère réduire les animations, rendu statique */
     @media (prefers-reduced-motion: reduce){
@@ -128,7 +138,11 @@
   "@type":"WebSite",
   "name":"Théorie ZM",
   "url":"https://zm-theory.github.io/",
-  "potentialAction":{"@type":"SearchAction","target":"https://zm-theory.github.io/?q={search_term_string}","query-input":"required name=search_term_string"}
+  "potentialAction":{
+    "@type":"SearchAction",
+    "target":"https://zm-theory.github.io/?q={search_term_string}",
+    "query-input":"required name=search_term_string"
+  }
 }
 </script>
 
@@ -157,7 +171,7 @@
   <noscript><div class="nojs-bg" aria-hidden="true"></div></noscript>
 
   <div class="content">
-    <div class="main-title">Théorie ZM</div>
+    <div class="main-title">Théorie ZM — ZM Théorie</div>
     <div class="subtitle">Une Révolution Scientifique sur la Nature de l'Univers</div>
 
     <p>Et si la Réalité n’était qu’un réseau d'information structuré par un champ d’information intemporel ?</p>
@@ -190,7 +204,7 @@
          style="display: inline-block; padding: 12px 18px; border-radius: 10px; background: #111; color: #fff; text-decoration: none; font-weight: 600;">
         PDF explicatif
       </a>
-      <a href="LIVRE_COMPLET_URL.pdf" class="btn">Commander le livre complet</a>
+      <a href="LIVRE_COMPLET_URL.pdf" class="btn" rel="nofollow noopener">Commander le livre complet</a>
     </div>
 
     <div class="contact">
@@ -349,7 +363,7 @@
     if (!mq.matches) loop();
     else renderStatic();
 
-    // Petit garde-fou : log si contexte 2D indisponible
+    // Garde-fou : log si contexte 2D indisponible
     if(!cFar || !cNear){
       console.warn('Canvas 2D non disponible (contexte null). Vérifie que ton navigateur n’active pas un bloqueur.');
     }
