--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
   <noscript><div class="nojs-bg" aria-hidden="true"></div></noscript>
 
   <div class="content">
-    <div class="main-title">Théorie ZM — ZM Théorie</div>
-    <div class="subtitle">Une Révolution Scientifique sur la Nature de l'Univers</div>
+    <h1 class="main-title">Théorie ZM</h1>
+    <h2 class="subtitle">Théorie des Pixels d’information</h2>
 
     <p>Et si la Réalité n’était qu’un réseau d'information structuré par un champ d’information intemporel ?</p>
     <p>Ici nous vous invitons à découvrir une nouvelle théorie aussi logique et percutante, qu’élégante…</p>
