--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
         <a href="mailto:mzerrouk95@gmail.com" class="btn">🤝 Contact Collaboratif</a>
       </div>
       <p style="font-style:italic; color:#B0C4DE; margin: 1.2rem 0 0;">
-        « La réalité pourrait bien n’être qu’un rêve logique, inscrit dans une mémoire computationnelle supraconsciente… »
+        "Ce que nous appelons réalité n'est peut-être qu'un rêve stable dans la conscience d'un champ mathématique." MZ.
       </p>
     </section>
 
